// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Google e2e test > should be succesful with structured_output 1`] = `
{
  "properties": {
    "actualData": {
      "description": "a valid sample date
constraints: a valid date-time",
      "type": "string",
      "x-date": true,
    },
    "arrayMax": {
      "description": "any valid sample array of strings with a maximum of 5 strings
constraints: maximum length 5",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "arrayMin": {
      "description": "any valid sample array of strings with a minimum of 1 string
constraints: minimum length 1",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "date": {
      "description": "a valid sample date
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "dateAfter": {
      "description": "a valid sample date after 2024-01-01
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "dateBefore": {
      "description": "a valid sample date before today
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "default": {
      "default": "test",
      "description": "sample text that is the default value",
      "type": "string",
    },
    "discriminatedUnion": {
      "anyOf": [
        {
          "properties": {
            "kind": {
              "enum": [
                "circle",
              ],
              "type": "string",
            },
            "r": {
              "type": "number",
            },
          },
          "required": [
            "kind",
            "r",
          ],
          "type": "object",
        },
        {
          "properties": {
            "kind": {
              "enum": [
                "square",
              ],
              "type": "string",
            },
            "s": {
              "type": "number",
            },
          },
          "required": [
            "kind",
            "s",
          ],
          "type": "object",
        },
      ],
      "description": "a circle with radius r or a square with side s",
    },
    "enum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "exampleArray": {
      "description": "any valid array of example strings",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "literal": {
      "description": "exactly the string "the-only-allowed-value"",
      "enum": [
        "the-only-allowed-value",
      ],
      "type": "string",
    },
    "nativeEnum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "nullable": {
      "description": "leave this field empty as an example of a nullable field",
      "nullable": true,
      "type": "string",
    },
    "number": {
      "description": "any valid sample number",
      "type": "number",
    },
    "numberGt": {
      "description": "any valid sample number greater than 3
constraints: greater than 3",
      "type": "number",
    },
    "numberGte": {
      "description": "any valid sample number greater than or equal to 1
constraints: greater than or equal to 1",
      "type": "number",
    },
    "numberInt": {
      "description": "any valid sample number that is an integer",
      "type": "integer",
    },
    "numberLt": {
      "description": "any valid sample number less than 6
constraints: lower than 6",
      "type": "number",
    },
    "numberLte": {
      "description": "any valid sample number less than or equal to 1
constraints: lower than or equal to 1",
      "type": "number",
    },
    "numberMultipleOf": {
      "description": "any valid sample number that is a multiple of 2
constraints: multiple of 2",
      "type": "number",
    },
    "object": {
      "description": "any valid sample object with a string and a number",
      "properties": {
        "bar": {
          "type": "number",
        },
        "foo": {
          "type": "string",
        },
      },
      "required": [
        "foo",
        "bar",
      ],
      "type": "object",
    },
    "objectLoose": {
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "objectNested": {
      "description": "any valid sample data",
      "properties": {
        "user": {
          "properties": {
            "age": {
              "description": "constraints: greater than or equal to 18",
              "type": "number",
            },
            "name": {
              "description": "constraints: minimum length 2",
              "type": "string",
            },
          },
          "required": [
            "name",
            "age",
          ],
          "type": "object",
        },
      },
      "required": [
        "user",
      ],
      "type": "object",
    },
    "objectPassthrough": {
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "optional": {
      "description": "leave this field empty as an example of an optional field",
      "type": "string",
    },
    "string": {
      "description": "Sample text",
      "type": "string",
    },
    "stringCuid": {
      "description": "a valid sample cuid
constraints: input must match this regex ^[cC][0-9a-z]{6,}$",
      "format": "cuid",
      "type": "string",
    },
    "stringEmail": {
      "description": "a sample email address
constraints: a valid email",
      "type": "string",
    },
    "stringEmoji": {
      "description": "a valid sample emoji
constraints: a valid emoji",
      "type": "string",
    },
    "stringMax": {
      "description": "sample text with a maximum of 10 characters
constraints: maximum length 10",
      "type": "string",
    },
    "stringMin": {
      "description": "sample text with a minimum of 5 characters
constraints: minimum length 5",
      "type": "string",
    },
    "stringRegex": {
      "description": "a valid sample string that satisfies the regex
constraints: input must match this regex ^test-",
      "type": "string",
    },
    "stringUrl": {
      "description": "a valid sample url
constraints: a valid uri",
      "type": "string",
    },
    "stringUuid": {
      "description": "a valid sample uuid
constraints: a valid uuid",
      "type": "string",
    },
    "tuple": {
      "description": "two-element tuple: a string followed by a number",
      "items": {
        "anyOf": [
          {
            "type": "string",
          },
          {
            "type": "number",
          },
        ],
      },
      "type": "array",
    },
    "unionObjects": {
      "anyOf": [
        {
          "properties": {
            "amount": {
              "type": "number",
            },
            "inventoryItemName": {
              "type": "string",
            },
          },
          "required": [
            "amount",
            "inventoryItemName",
          ],
          "type": "object",
        },
        {
          "properties": {
            "permissions": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
            "type": {
              "type": "string",
            },
          },
          "required": [
            "type",
            "permissions",
          ],
          "type": "object",
        },
      ],
      "description": "give an valid object",
    },
    "unionPrimitives": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "number",
        },
      ],
      "description": "sample text or number",
    },
  },
  "required": [
    "string",
    "stringMin",
    "stringMax",
    "stringEmail",
    "stringEmoji",
    "stringUrl",
    "stringUuid",
    "stringCuid",
    "stringRegex",
    "number",
    "numberGt",
    "numberLt",
    "numberGte",
    "numberLte",
    "numberMultipleOf",
    "numberInt",
    "exampleArray",
    "arrayMin",
    "arrayMax",
    "date",
    "dateAfter",
    "dateBefore",
    "actualData",
    "object",
    "objectNested",
    "objectPassthrough",
    "objectLoose",
    "nullable",
    "enum",
    "nativeEnum",
    "unionPrimitives",
    "unionObjects",
    "discriminatedUnion",
    "literal",
    "tuple",
    "default",
  ],
  "type": "object",
}
`;

exports[`Google e2e test > should be succesful with structured_output 2`] = `
{
  "value": {
    "actualData": 2023-01-01T00:00:00.000Z,
    "arrayMax": [
      "a",
      "b",
      "c",
    ],
    "arrayMin": [
      "a",
    ],
    "date": 2023-01-01T00:00:00.000Z,
    "dateAfter": 2024-05-01T00:00:00.000Z,
    "dateBefore": 2020-01-01T00:00:00.000Z,
    "default": "default value",
    "discriminatedUnion": {
      "kind": "circle",
      "r": 5,
    },
    "enum": "A",
    "exampleArray": [
      "a",
      "b",
    ],
    "literal": "the-only-allowed-value",
    "nativeEnum": "B",
    "nullable": "",
    "number": 10,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 7,
    "numberLt": 5,
    "numberLte": 1,
    "numberMultipleOf": 4,
    "object": {
      "bar": 1,
      "foo": "test",
    },
    "objectLoose": {},
    "objectNested": {
      "user": {
        "age": 25,
        "name": "Alice",
      },
    },
    "objectPassthrough": {},
    "optional": "",
    "string": "sample",
    "stringCuid": "c1234567",
    "stringEmail": "test@example.com",
    "stringEmoji": "🚀",
    "stringMax": "abcdefghij",
    "stringMin": "abcde",
    "stringRegex": "test-foo",
    "stringUrl": "https://example.com",
    "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
    "tuple": [
      "string value",
      123,
    ],
    "unionObjects": {
      "amount": 5,
      "inventoryItemName": "item",
    },
    "unionPrimitives": "test string",
  },
}
`;

exports[`Google e2e test > should handle tool call with manySchemas input 1`] = `
{
  "value": {
    "actualData": 2023-10-01T12:00:00.000Z,
    "arrayMax": [
      "one",
      "two",
    ],
    "arrayMin": [
      "one",
    ],
    "date": 2023-10-01T12:00:00.000Z,
    "dateAfter": 2025-01-01T12:00:00.000Z,
    "dateBefore": 2020-01-01T12:00:00.000Z,
    "default": "default text",
    "discriminatedUnion": {
      "kind": "circle",
      "r": 5,
    },
    "enum": "A",
    "exampleArray": [
      "example1",
      "example2",
    ],
    "literal": "the-only-allowed-value",
    "nativeEnum": "B",
    "nullable": null,
    "number": 42,
    "numberGt": 5,
    "numberGte": 2,
    "numberInt": 10,
    "numberLt": 4,
    "numberLte": 0,
    "numberMultipleOf": 8,
    "object": {
      "bar": 1,
      "foo": "test",
    },
    "objectLoose": {
      "sampleKey": "sampleValue",
    },
    "objectNested": {
      "user": {
        "age": 25,
        "name": "Alice",
      },
    },
    "objectPassthrough": {
      "sampleKey": "sampleValue",
    },
    "string": "sample",
    "stringCuid": "c1234567",
    "stringEmail": "test@example.com",
    "stringEmoji": "🚀",
    "stringMax": "sample",
    "stringMin": "sample-text",
    "stringRegex": "test-string",
    "stringUrl": "https://example.com",
    "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
    "tuple": [
      "test",
      42,
    ],
    "unionObjects": {
      "amount": 10,
      "inventoryItemName": "apple",
    },
    "unionPrimitives": "union-test",
  },
}
`;

exports[`Google e2e test > should handle tool call with manySchemas input and output 1`] = `
"I have successfully called the \`manySchemasTool\` using valid sample data strictly matching all the provided schema constraints. Here is the validated tool output returned by the system:

\`\`\`json
{
  "actualData": "2023-01-01T00:00:00.000Z",
  "arrayMax": ["one", "two"],
  "arrayMin": ["one"],
  "date": "2023-01-01T00:00:00.000Z",
  "dateAfter": "2024-02-01T00:00:00.000Z",
  "dateBefore": "2022-01-01T00:00:00.000Z",
  "default": "default value",
  "discriminatedUnion": {
    "kind": "circle",
    "r": 5
  },
  "enum": "A",
  "exampleArray": ["example"],
  "literal": "the-only-allowed-value",
  "nativeEnum": "B",
  "nullable": null,
  "number": 42,
  "numberGt": 4,
  "numberGte": 1,
  "numberInt": 10,
  "numberLt": 5,
  "numberLte": 1,
  "numberMultipleOf": 8,
  "object": {
    "bar": 123,
    "foo": "test"
  },
  "objectLoose": {
    "exampleKey": "exampleData"
  },
  "objectNested": {
    "user": {
      "age": 25,
      "name": "Alice"
    }
  },
  "objectPassthrough": {
    "exampleKey": "exampleData"
  },
  "string": "Sample text",
  "stringCuid": "c1234567",
  "stringEmail": "test@example.com",
  "stringEmoji": "🚀",
  "stringMax": "1234567890",
  "stringMin": "12345",
  "stringRegex": "test-string",
  "stringUrl": "https://example.com",
  "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
  "tuple": [
    "tuple_string",
    42
  ],
  "unionObjects": {
    "amount": 10,
    "inventoryItemName": "Widget"
  },
  "unionPrimitives": 100
}
\`\`\`"
`;
